--- a/css/scroll-to-top.css
+++ b/css/scroll-to-top.css
@@ -13,6 +13,13 @@
     /*  */
     width: 50px;
     height: 50px;
+    border: none;
+    outline: none;
+}
+
+.scroll-to-top:focus {
+    border: none;
+    outline: none;
 }
 
 #scroll-to-top img {
