--- a/css/scroll-to-top.css
+++ b/css/scroll-to-top.css
@@ -14,11 +14,13 @@
     width: 50px;
     height: 50px;
     border: none;
+    border-radius: 50%;
     outline: none;
 }
 
 .scroll-to-top:focus {
     border: none;
+    border-radius: 50%;
     outline: none;
 }
 
